sort.basic.shell.AlgShellSort.scala.error
Compilation error:
AlgShellSort:3: error: not found: value ecart
  ecart=getNombreValeurs()/2
  ^AlgShellSort:4: error: not found: value ecart
  while (ecart>0){
         ^AlgShellSort:5: error: not found: value ecart
    insertionSort(ecart)
                  ^AlgShellSort:6: error: not found: value ecart
    ecart=ecart/2
    ^